<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BadmintonManager　FREE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player3">Player3</string>
    <string name="player4">Player4</string>
    <string name="team1">Team1</string>
    <string name="team2">Team2</string>
    <string name="gamename">GameName</string>
    <string name="memo">note</string>

</resources>