<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffdd99"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/GameName"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/back_teamdivide"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/team1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@+string/team1"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/player1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/player1"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/player2"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/player2"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/back_teamdivide"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/team2"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@+string/team2"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/player3"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/player3"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/player4"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:hint="@string/player4"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/memo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/edit_custom"
            android:gravity="left|top"
            android:hint="@string/memo"
            android:lines="4" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_custom" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_custom" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_custom" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_custom" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_custom" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>